# shell-core

./: .travis.yml  Cargo.toml  README.md
src/: core.rs  lib.rs  process.rs  runner.rs  streams.rs
src/parsers/: bash.rs  mod.rs
src/tasks/: manager.rs  mod.rs  process.rs  task.rs
